test_regress/t/t_preproc_eof3_bad.out
%Error: t/t_preproc_eof3_bad.v:10:1: EOF in define argument list
   10 | %Error-internal-contents-bad-ct2-ln10
      | ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_preproc_eof3_bad.v:10:1: Expecting ) or , to end argument list for define reference. Found: EOF
   10 | %Error-internal-contents-bad-ct2-ln10
      | ^
%Error: Exiting due to
